# icey

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
cli/iceyCLI/: __main__.py
core/iceyCore/: manifest.py
core/iceyCore/crypto/: aes.py
core/iceyCore/storage/: localFS.py
rust/dedupe/: Cargo.toml
rust/dedupe/src/: lib.rs
tests/: test_cli.py  test_manifest.py
