[project]
name = "icey"
version = "0.1.0"
description = "Context keeper CLI for collaborative and cross-IDE work."
authors = [{name="Aayush Tripathi", email="22ucs002@lnmiit.ac.in"}]
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.12",
  "rich>=14.0.0",
  "cryptography>=45.0.4",
  "pydantic>=2.7"
]
[tool.poetry]
packages = [
  { include = "core" },
  { include = "cli" }
]
[tool.poetry.scripts]
icey = "cli.iceyCLI.__main__:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "black>=25.1.0",
  "ruff>=0.12.0",
  "isort>=6.0.1",
  "mypy>=1.16.1",
  "pre-commit>=4.2.0"
  ]

[tool.black]
line-length = 88

[tool.isort]
profile           = "black"
line_length       = 88
known_first_party = ["icey_core", "icey_cli"]

[tool.ruff]
line-length = 88